--- a/05week/demo/pom.xml
+++ b/05week/demo/pom.xml
@@ -41,12 +41,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.mysstart</groupId>
-			<artifactId>demo</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<systemPath>/Users/liweiao/spring-boot-start-mystart.jar</systemPath>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.mysstart</groupId>-->
+<!--			<artifactId>demo</artifactId>-->
+<!--			<version>0.0.1-SNAPSHOT</version>-->
+<!--			<systemPath>/Users/liweiao/spring-boot-start-mystart.jar</systemPath>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
