--- a/05week/demo/src/main/resources/application.properties
+++ b/05week/demo/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+my.jdbc.userName=root
+my.jdbc.password=111111
+my.jdbc.url=jdbc:mysql://localhost:3306/test
+my.jdbc.driverClass=com.mysql.cj.jdbc.Driver
 
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=111111
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=15
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.pool-name=DatebookHikariCP
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.connection-test-query=SELECT 1
