07week作业 数据源动态切换

--- a/05week/demo/src/main/resources/application.properties
+++ b/05week/demo/src/main/resources/application.properties
@@ -5,7 +5,7 @@ my.jdbc.driverClass=com.mysql.cj.jdbc.Driver
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=111111
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
